--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-PROXY_URL=https://example.com
+PROXY_URI=https://example.com
 LETS_ENCRYPT_EMAIL=me@example.com
-SEND_URL=https://send.example.com
+SEND_URI=https://send.example.com
