--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - PROXY_URI=${PROXY_URI}
       - PROXY_LETS_ENCRYPT_EMAIL=${LETS_ENCRYPT_EMAIL}
-      - PROXY_AUTO_DOMAIN_PRIMARY=${SEND_URL}
+      - PROXY_AUTO_DOMAIN_PRIMARY=${SEND_URI}
       - PROXY_AUTO_DOMAIN_UPSTREAM=http://send:3000
     volumes:
       - ./v/sites:/sites
@@ -23,7 +23,7 @@ services:
     container_name: send
     restart: unless-stopped
     environment:
-      - SEND_BASE_URL=${SEND_URL}
+      - SEND_BASE_URI=${SEND_URI}
     volumes:
       - ./v/uploads:/uploads
     networks:
