Fixing variable in docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     environment:
       - PROXY_URI=${PROXY_URI}
       - PROXY_LETS_ENCRYPT_EMAIL=${LETS_ENCRYPT_EMAIL}
-      - PROXY_AUTO_DOMAIN_PRIMARY=${SEND_URI}
-      - PROXY_AUTO_DOMAIN_UPSTREAM=http://send:3000
+      - PROXY_AUTO_PRIMARY=${SEND_URI}
+      - PROXY_AUTO_UPSTREAM=http://send:3000
     volumes:
       - ./v/sites:/sites
       - ./v/ssl:/ssl
