--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       -
         name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       -
         name: Get repository name
         run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
@@ -65,12 +65,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Login to GitHub Container Registry
+        name: Login to Quay.io Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: quay.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.QUAY_TOKEN }}
       -
         name: Build and push
         id: docker_build
@@ -92,15 +92,15 @@ jobs:
             bfren/send:send${{ steps.send_minor.outputs.contents }}
             bfren/send:send${{ steps.send_minor.outputs.contents }}-${{ steps.version.outputs.contents }}
             bfren/send:send${{ steps.send_revision.outputs.contents }}
-            ghcr.io/bfren/send:latest
-            ghcr.io/bfren/send:${{ steps.version_major.outputs.contents }}
-            ghcr.io/bfren/send:${{ steps.version_minor.outputs.contents }}
-            ghcr.io/bfren/send:${{ steps.version.outputs.contents }}
-            ghcr.io/bfren/send:send${{ steps.send_major.outputs.contents }}
-            ghcr.io/bfren/send:send${{ steps.send_major.outputs.contents }}-${{ steps.version.outputs.contents }}
-            ghcr.io/bfren/send:send${{ steps.send_minor.outputs.contents }}
-            ghcr.io/bfren/send:send${{ steps.send_minor.outputs.contents }}-${{ steps.version.outputs.contents }}
-            ghcr.io/bfren/send:send${{ steps.send_revision.outputs.contents }}
+            quay.io/bfren/send:latest
+            quay.io/bfren/send:${{ steps.version_major.outputs.contents }}
+            quay.io/bfren/send:${{ steps.version_minor.outputs.contents }}
+            quay.io/bfren/send:${{ steps.version.outputs.contents }}
+            quay.io/bfren/send:send${{ steps.send_major.outputs.contents }}
+            quay.io/bfren/send:send${{ steps.send_major.outputs.contents }}-${{ steps.version.outputs.contents }}
+            quay.io/bfren/send:send${{ steps.send_minor.outputs.contents }}
+            quay.io/bfren/send:send${{ steps.send_minor.outputs.contents }}-${{ steps.version.outputs.contents }}
+            quay.io/bfren/send:send${{ steps.send_revision.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
